...
    return Scaffold(
      appBar: AppBar(
        title: Text(_title),
        backgroundColor: globals.osloDarkBlue,
        actions: <Widget>[
          PopupMenuButton<PopUpMenuOptions>(
            key: Key('popMenu'),
            onSelected: _popUpItemSelected,
            itemBuilder: (BuildContext context) =>
                <PopupMenuEntry<PopUpMenuOptions>>[
              const PopupMenuItem(
                value: PopUpMenuOptions.myPage,
                child: Text('Min side'),
                key: Key('mypage'),
              ),
              const PopupMenuDivider(),
              const PopupMenuItem(
                value: PopUpMenuOptions.logOut,
                child: Text('Logg ut'),
                key: Key('logout'),
              ),
            ],
            icon: Image.asset('assets/icons/person.png',
                color: globals.osloWhite),
          )
        ],
...
